RESOLVED FIXED 153616
Modern IDB: Fix several more problems with object store changes during cursor iteration in SQLite backend
https://bugs.webkit.org/show_bug.cgi?id=153616
Summary Modern IDB: Fix several more problems with object store changes during cursor...
Brady Eidson
Reported 2016-01-28 14:45:30 PST
Modern IDB: Fix several more problems with object store changes during cursor iteration in SQLite backend
Attachments
Patch v1 (6.75 KB, patch)
2016-01-28 14:53 PST, Brady Eidson
achristensen: review+
Brady Eidson
Comment 1 2016-01-28 14:53:15 PST
Created attachment 270150 [details] Patch v1
Brady Eidson
Comment 2 2016-01-28 15:19:11 PST
Note You need to log in before you can comment on or make changes to this bug.